Fixed width issue on mobile

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -14,6 +14,7 @@
 	grid-template-areas:
         'nav    nav    nav'
         'main   main   main' !important;
+	max-width: none !important;
 }
 
 .mobile > header {
